--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="bg-red">
     <div class="container align-center">
       <h3 class="text-white">GitHub API</h3>
-      <p class="text-white">Enter a valid GitHub username</p>
+      <p class="text-white">Enter a valid GitHub username (Pending implementation)</p>
       <div class="inputContainer">
         <input #Username type="text" name="" placeholder="GitHub username">
         <input (click)="getUsername(Username.value); updateUrl(Username.value)" type="submit">
